# STO_CombatLogAnalyzer

./: CHANGELOG.md  Cargo.toml  LICENSE.MIT  README.md  about.toml  build.rs  default_settings.json
icon/: icon.xcf
src/: main.rs
src/analyzer/: common.rs  damage.rs  groups.rs  heal.rs  mod.rs  name_manager.rs  parser.rs  settings.rs  values_manager.rs
src/app/: analysis_handling.rs  damage_table.rs  logging.rs  mod.rs  overlay.rs  settings.rs  state.rs  status.rs  summary_copy.rs
src/app/main_tabs/: common.rs  damage_tab.rs  damage_table.rs  dps_plot.rs  heal_tab.rs  mod.rs  summary_tab.rs  summary_table.rs
src/app/main_tabs/diagrams/: common.rs  damage_chart.rs  damage_resistance_chart.rs  dps_graph.rs  mod.rs  summary_chart.rs  value_per_second_graph.rs  values_chart.rs
src/app/main_tabs/tables/: common.rs  damage_table.rs  heal_table.rs  metrics_table.rs  mod.rs  summary_table.rs
src/app/settings/: STO_CombatLogAnalyzer_Settings.json  analysis.rs  app_settings.rs  debug.rs  file.rs  general.rs  mod.rs  upload.rs  visuals.rs
src/custom_widgets/: mod.rs  number_edit.rs  popup_button.rs  slider_text_edit.rs  splitter.rs  table.rs
src/helpers/: mod.rs  number_formatting.rs
src/parser/: mod.rs
src/upload/: common.rs  mod.rs  records.rs  upload.rs
