[workspace]

[package]
name = "STO_CombatLogAnalyzer"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.3", default-features = false, features = [
    "default_fonts",
    "glow",
] }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
regex = "1.7.0"
bitflags = "1.3.2"
log = { version = "0.4.17", features = ["serde"] }
rustc-hash = "1.1.0"
rfd = "0.10.0"
serde_json = "1.0.89"
serde = { version = "1.0.150", features = ["serde_derive"] }
smallvec = { version = "1.10.0", features = ["const_new", "const_generics"] }
crossbeam-channel = "0.5.6"
simplelog = "0.12.0"
notify = "5.0.0"
timer = "0.2.0"
itertools = "0.10.5"
educe = { version = "0.4.20", default-features = false, features = [
    "Deref",
    "DerefMut",
] }
png = "0.17.7"

[profile.release]
lto = "thin"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
