[workspace]

[package]
name = "STO_CombatLogAnalyzer"
version = "1.4.0-alpha2"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_plot = { version = "0.33" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
lazy_static = "1"
regex = "1"
bitflags = "2"
log = { version = "0.4", features = ["serde"] }
rustc-hash = "2"
rfd = { version = "0.15" }
serde_json = "1"
serde = { version = "1", features = ["serde_derive"] }
smallvec = { version = "1", features = ["const_new", "const_generics"] }
crossbeam-channel = "0.5"
simplelog = "0.12"
notify = "8"
timer = "0.2"
itertools = "0.14"
educe = { version = "0.6", default-features = false, features = [
    "Deref",
    "DerefMut",
] }
png = "0.17"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
flate2 = "1"

[profile.release]
lto = "thin"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
